Upgrade - uwzględniony spock oraz brak polskich liter w nożyczki oraz kamień.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Kamień, papier, nożyczki, Spock i jaszczurka
 <hr>
 <br>
 <p>
-<img src="spock.jpg" height=90% width=90%>
+<img src="spock.jpg" height=90% width=90% class="img">
 </p>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="script.js"></script>
